2013-06-28  Ethan A Merritt  <merritt@u.washington.edu>

	* src/misc.c (load_file): Expand macros up to 3 levels deep when 
	stepping through a "load" operation.  This matches the depth allowed
	at the top level command line.
	Bug #1246

	* src/graph3d.c (draw3d_graphbox):  "set [xy]label rotate parallel"
	is affected by the direction of the complementary axis.
	Bug #1252

2013-06-27  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/graphics.c (do_ellipse): Repair atrocious pointer casts
	spotted by J. Bollinger.

2013-06-24  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/util.c|h (existfile):  New (missing) routine.

2013-06-22  Mojca Miklavec  <mojca.miklavec.lists@gmail.com>

	* term/context.trm: Explicitly disable color in standalone ConTeXt
	documents when monochrome option is chosen.

2013-06-18  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* src/datafile.c (plot_option_every):  Treat negative numbers as
	indicating "default value".

2013-06-16  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_tokenise):  Get rid of erroneous test against
	axis_array[foo].timefmt (always evaluates as TRUE).

2013-06-07  Thomas Mattison  <mattison <at> phas.ubc.ca>

	* src/fit.c (regress):  Fit did not converge if maximum lambda was
	exceeded.  Add new message for this case.
	Patchset #230.

2013-06-07  Bastian Maerkisch  <bmaerkisch@web.de>

	More backports from version 4.7

	* src/fit.c (fit_command):  Always initialize variables which might be
	set by user variables.  This is necessary since user variables may be
	`undefine`d.

	* src/fit.c (backup_file):  Remove code path for Win32s.  Backup files 
	will not get overwritten.  Add error message for that case.

	* src/fit.c (fit_command):  Log file contained the wrong variable name
	for axis restrictions.  Reported by Victor Slabinski on gnuplot-bugs.

	* src/fit.c|h src/win/wgraph.c src/win/wtext.c:  Ctrl-Break interrupts
	fitting runs in wgnuplot.
