@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: datafile.c,v 1.212.2.20 2013/06/16 16:30:43 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: datafile.c,v 1.212.2.21 2013/06/18 19:38:41 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - datafile.c */
@@ -1522,12 +1522,15 @@ plot_option_using(int max_using)
 }
 
 
-static
-void plot_ticlabel_using(int axis)
+static void
+plot_ticlabel_using(int axis)
 {
     int col = 0;
     
-    c_token += 2;
+    c_token ++;
+    if (!equals(c_token,"("))
+	int_error(c_token, "missing '('");
+    c_token++;
 
     /* FIXME: What we really want is a test for a constant expression as  */
     /* opposed to a dummy expression. This is similar to the problem with */
@@ -1543,6 +1546,8 @@ void plot_ticlabel_using(int axis)
 
     if (col < 1)
 	int_error(c_token, "ticlabels must come from a real column");
+    if (!equals(c_token,")"))
+	int_error(c_token, "missing ')'");
     c_token++;
     use_spec[df_no_use_specs+df_no_tic_specs].expected_type = axis;
     use_spec[df_no_use_specs+df_no_tic_specs].column = col;
