@@ -1,3 +1,9 @@
+2013-07-01  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/datafile.c (plot_ticlabel_using):  Explicit error message if
+	required parentheses are missing from using spec.
+	Bug #1256
+
 2013-06-28  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/misc.c (load_file): Expand macros up to 3 levels deep when 
